// SPDX-License-Identifier: Apache-2.0
//
// Copyright 2024 The Taxinomia Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package taxinomia.csvimport;

option go_package = "github.com/google/taxinomia/core/csvimport/proto";

// ColumnType specifies the data type for a column.
enum ColumnType {
  // Auto-detect type from data (default).
  COLUMN_TYPE_AUTO = 0;
  // String column.
  COLUMN_TYPE_STRING = 1;
  // Unsigned 32-bit integer column.
  COLUMN_TYPE_UINT32 = 2;
}

// ColumnAnnotation defines annotations for a single CSV column.
message ColumnAnnotation {
  // The column name in the CSV header (required for matching).
  string name = 1;

  // Display name shown in the UI. If empty, uses the CSV header name.
  string display_name = 2;

  // Entity type for join support (e.g., "region", "category").
  // Columns with matching entity types across tables can be joined.
  string entity_type = 3;

  // Data type for this column. If AUTO, type is detected from data.
  ColumnType type = 4;
}

// TableAnnotation defines annotations for importing a CSV file as a table.
message TableAnnotation {
  // Name of the table.
  string name = 1;

  // Annotations for individual columns.
  repeated ColumnAnnotation columns = 2;

  // Domains group related tables together (e.g., "demo", "sales", "inventory").
  // A table can belong to multiple domains.
  repeated string domains = 3;
}

// TableAnnotations is a collection of table annotations.
message TableAnnotations {
  // List of table annotations.
  repeated TableAnnotation tables = 1;
}
